<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">
    <PreferenceCategory
        android:title="@string/action_settings">
        <CheckBoxPreference
            android:key="prefStartDelete"
            android:title="@string/settings_delete_on_start"
            android:summary="@string/settings_delete_on_start_description"
            android:defaultValue="false" />
        <Preference
            android:key="prefDeleteAll"
            android:title="@string/settings_delete_all"
            android:summary="@string/settings_delete_all_description" />
        <ListPreference
            android:key="prefCustomFilename"
            android:title="@string/settings_custom_filename"
            android:entries="@array/filenameEntries"
            android:entryValues="@array/filenameValues"
            android:defaultValue="1" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/settings_customizations">
        <yuku.ambilwarna.widget.AmbilWarnaPreference
            android:key="prefPrimaryColor"
            android:defaultValue="@color/primary"
            android:title="@string/settings_primary_color"
            android:summary="@string/settings_primary_color_description"/>
        <yuku.ambilwarna.widget.AmbilWarnaPreference
            android:key="prefFABColor"
            android:defaultValue="@color/fab"
            android:title="@string/settings_fab_color"
            android:summary="@string/settings_fab_color_description"/>
        <CheckBoxPreference
            android:key="prefFABShow"
            android:title="@string/settings_fab_show"
            android:summary="@string/settings_fab_show_description"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="prefNavigationBlack"
            android:title="@string/settings_navigation_black"
            android:summary="@string/settings_navigation_black_description"
            android:defaultValue="false" />
        <Preference
            android:key="prefDefaultValues"
            android:title="@string/settings_default_customization"
            android:summary="@string/settings_default_customization_description" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/action_about">
        <Preference
            android:title="@string/settings_googleplay"
            android:summary="@string/settings_googleplay_description">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://play.google.com/store/apps/details?id=com.javiersantos.mlmanager" />
        </Preference>
        <Preference
            android:title="@string/settings_googleplus"
            android:summary="@string/settings_googleplus_description">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://plus.google.com/communities/111960842500303983487" />
        </Preference>
        <Preference
            android:key="prefVersion"
            android:title="@string/app_name"
            android:summary="@string/settings_about" />
    </PreferenceCategory>
</PreferenceScreen>